New things added

--- a/index.html
+++ b/index.html
@@ -106,6 +106,44 @@
           obcaecati adipisci esse labore! Dicta quidem nesciunt ducimus in eaque
           nulla maiores a, sit blanditiis soluta quam.
         </p>
+
+        <h1 class="content-head"><span class="symbol">&middot;</span>CSS</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sit
+          perferendis eius enim, odit officia alias adipisci reiciendis earum
+          quae beatae unde iure, ipsum molestiae nihil accusamus delectus
+          dolorum sapiente eveniet porro? Quaerat accusamus facere veritatis
+          esse ipsam. Earum perspiciatis quo atque, perferendis iste
+          voluptatibus accusamus! Rem aliquid et, error optio dicta aspernatur,
+          odio ullam tenetur voluptatibus debitis, voluptatem mollitia facere
+          maxime excepturi. Dolorum non quo nobis ex ab a qui nemo cumque
+          temporibus, iste amet voluptatibus esse in nihil eum! Culpa sunt ipsam
+          consectetur, voluptates dolores quod est doloribus maiores fuga
+          temporibus perferendis minus! Rerum nulla, odit ea ducimus tempore
+          explicabo recusandae eveniet iusto natus, excepturi necessitatibus!
+          Quaerat reiciendis libero, natus eius nisi tempore quos eaque, illo
+          temporibus nesciunt culpa reprehenderit fugit consectetur. Blanditiis
+          similique natus quae voluptatem amet deleniti consequatur asperiores
+          animi obcaecati omnis nemo praesentium qui atque laboriosam sunt nam
+          dolorum, voluptas vel tempora cumque, voluptate inventore optio magnam
+          mollitia. In consequuntur ipsa debitis dicta fugit dolores,
+          reprehenderit libero corrupti, alias est aut, tenetur amet
+          perspiciatis obcaecati ex rerum. Dolores error praesentium dicta magni
+          esse recusandae placeat eius a accusamus ipsa nobis unde ab saepe
+          quia, quisquam, ducimus aut est consequuntur expedita. Ab, repellendus
+          eius est magnam incidunt laudantium corrupti deleniti perferendis
+          cupiditate at natus amet fugit nulla quisquam, doloribus aperiam quam
+          eum mollitia minima voluptas maxime, nesciunt cum delectus
+          dignissimos. Perspiciatis, beatae totam repellat sit, molestias natus,
+          alias ratione est possimus ea corporis excepturi sint quia optio
+          dignissimos ab ad eos fugiat deserunt pariatur nam hic odit
+          doloremque. Ipsam soluta praesentium quisquam architecto! Dicta
+          temporibus est beatae magnam accusantium minima in earum omnis
+          obcaecati aut odio pariatur delectus inventore labore, id eligendi,
+          illo, reiciendis consequatur autem qui sapiente sed? Maxime expedita
+          accusantium, distinctio amet possimus dignissimos illo iste
+          repellendus vel, perspiciatis, vitae illum consectetur nihil aliquam!
+        </p>
       </section>
     </main>
     <footer></footer>
