--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </p>
 
         <h1 class="content-head"><span class="symbol">&middot;</span>CSS</h1>
-        <p>
+        <p class="text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sit
           perferendis eius enim, odit officia alias adipisci reiciendis earum
           quae beatae unde iure, ipsum molestiae nihil accusamus delectus
