--- a/index.html
+++ b/index.html
@@ -70,80 +70,10 @@
       </section>
       <section>
         <h1 class="content-head"><span class="symbol">&middot;</span>HTML</h1>
-        <p class="text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora
-          molestias sapiente eaque atque id at expedita voluptatibus et fugit,
-          debitis mollitia velit, qui, laborum asperiores suscipit! Iure impedit
-          laborum voluptatem non itaque quas nostrum sunt deserunt labore. Quam
-          perferendis et inventore voluptates iure fugiat, cumque modi eum autem
-          ullam, labore commodi atque, ea deserunt maiores iste velit saepe.
-          Quaerat deleniti assumenda, ab libero nobis ea voluptates tempora
-          veniam facilis ad commodi eveniet aliquam culpa optio impedit repellat
-          voluptatem beatae natus molestias error! Aliquam doloremque animi
-          blanditiis cumque quisquam ipsa voluptate reiciendis alias, earum
-          dolorem quasi ipsam molestias voluptatum, maiores magni beatae ullam
-          unde voluptatibus soluta fugiat. Quam, iste. Libero maiores
-          asperiores, delectus laboriosam unde laborum temporibus qui,
-          perferendis assumenda molestias illum velit earum dignissimos
-          accusamus natus nisi eligendi voluptate eos, dolorem eveniet debitis
-          accusantium voluptas? Blanditiis dignissimos aliquid rerum iste
-          veniam, quas deleniti aliquam odio distinctio perspiciatis dolores
-          nihil repudiandae officia, et, beatae suscipit laudantium error quam
-          impedit nesciunt sapiente. Ratione accusamus minima cum architecto
-          eius voluptatum tenetur iusto officia culpa. Nam, beatae ad! Veritatis
-          beatae quaerat labore unde mollitia ratione ipsam ut fugiat sequi
-          nostrum modi, saepe temporibus soluta iste totam porro repudiandae
-          nesciunt sapiente minima. Beatae iste vel blanditiis quos, asperiores
-          vitae unde provident commodi distinctio doloremque ab nesciunt aliquid
-          magnam cupiditate eius. Dolores officia quas eos laborum, fugit est
-          natus asperiores hic, recusandae aspernatur perspiciatis aperiam
-          libero non quam animi nobis totam neque officiis ad sunt architecto
-          praesentium dolore corrupti facilis! Ex, quo quia sequi autem voluptas
-          sit corrupti accusamus quam facilis fugiat, aliquid unde blanditiis
-          cumque, delectus ipsam reiciendis asperiores nostrum magni veniam
-          eligendi voluptatem? Ab beatae consectetur a vitae enim at
-          repellendus, molestias amet, officiis eaque eligendi laboriosam
-          obcaecati adipisci esse labore! Dicta quidem nesciunt ducimus in eaque
-          nulla maiores a, sit blanditiis soluta quam.
-        </p>
+        <p class="text"></p>
 
         <h1 class="content-head"><span class="symbol">&middot;</span>CSS</h1>
-        <p class="text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sit
-          perferendis eius enim, odit officia alias adipisci reiciendis earum
-          quae beatae unde iure, ipsum molestiae nihil accusamus delectus
-          dolorum sapiente eveniet porro? Quaerat accusamus facere veritatis
-          esse ipsam. Earum perspiciatis quo atque, perferendis iste
-          voluptatibus accusamus! Rem aliquid et, error optio dicta aspernatur,
-          odio ullam tenetur voluptatibus debitis, voluptatem mollitia facere
-          maxime excepturi. Dolorum non quo nobis ex ab a qui nemo cumque
-          temporibus, iste amet voluptatibus esse in nihil eum! Culpa sunt ipsam
-          consectetur, voluptates dolores quod est doloribus maiores fuga
-          temporibus perferendis minus! Rerum nulla, odit ea ducimus tempore
-          explicabo recusandae eveniet iusto natus, excepturi necessitatibus!
-          Quaerat reiciendis libero, natus eius nisi tempore quos eaque, illo
-          temporibus nesciunt culpa reprehenderit fugit consectetur. Blanditiis
-          similique natus quae voluptatem amet deleniti consequatur asperiores
-          animi obcaecati omnis nemo praesentium qui atque laboriosam sunt nam
-          dolorum, voluptas vel tempora cumque, voluptate inventore optio magnam
-          mollitia. In consequuntur ipsa debitis dicta fugit dolores,
-          reprehenderit libero corrupti, alias est aut, tenetur amet
-          perspiciatis obcaecati ex rerum. Dolores error praesentium dicta magni
-          esse recusandae placeat eius a accusamus ipsa nobis unde ab saepe
-          quia, quisquam, ducimus aut est consequuntur expedita. Ab, repellendus
-          eius est magnam incidunt laudantium corrupti deleniti perferendis
-          cupiditate at natus amet fugit nulla quisquam, doloribus aperiam quam
-          eum mollitia minima voluptas maxime, nesciunt cum delectus
-          dignissimos. Perspiciatis, beatae totam repellat sit, molestias natus,
-          alias ratione est possimus ea corporis excepturi sint quia optio
-          dignissimos ab ad eos fugiat deserunt pariatur nam hic odit
-          doloremque. Ipsam soluta praesentium quisquam architecto! Dicta
-          temporibus est beatae magnam accusantium minima in earum omnis
-          obcaecati aut odio pariatur delectus inventore labore, id eligendi,
-          illo, reiciendis consequatur autem qui sapiente sed? Maxime expedita
-          accusantium, distinctio amet possimus dignissimos illo iste
-          repellendus vel, perspiciatis, vitae illum consectetur nihil aliquam!
-        </p>
+        <p class="text"></p>
       </section>
     </main>
     <footer></footer>
