--- a/index.html
+++ b/index.html
@@ -70,7 +70,25 @@
       </section>
       <section>
         <h1 class="content-head"><span class="symbol">&middot;</span>HTML</h1>
-        <p class="text"></p>
+        <p class="text">
+          HTML stands for Hypertext Markup Language. Tim Berners-Lee wrote the
+          first version of HTML in 1993. Since then, there have been many
+          different versions of HTML. The most widely used version throughout
+          the 2000s was HTML 4.01, which became an official standard in December
+          1999. At present the most used version of HTML is HTML5. Another
+          version, XHTML, was a rewrite of HTML as an XML language.
+        </p>
+        <p class="text">
+          HTML was invented initially as a language intended for the
+          distribution of relatively simple for use by authors documents,
+          suitable or academics rather than experts in printing or other aspects
+          of document formatting.
+        </p>
+        <p class="text">
+          HTML is very easy to learn. By useing HTML we can make a structur of a
+          web page. Web sites are mainly a group of web pages, which are
+          connected.
+        </p>
 
         <h1 class="content-head"><span class="symbol">&middot;</span>CSS</h1>
         <p class="text"></p>
