New code added in line 100-106

--- a/index.html
+++ b/index.html
@@ -87,7 +87,22 @@
         <p class="text">
           HTML is very easy to learn. By useing HTML we can make a structur of a
           web page. Web sites are mainly a group of web pages, which are
-          connected.
+          connected. We can easily make a wed page by a few html tags.
+        </p>
+        <p class="text">
+          There are a lot of html tags. It has its onw standard structur. But we
+          can a wed page with or without it. But it is a best practice to use
+          it. Because, the code we have written without it can be see on our
+          local machine, but when we will publish it may not show as we accept
+          it. So, we should use the standard structur therefore it will work on
+          all device. The standard sturctur is showen below.
+        </p>
+        <p class="text">
+          &lt;DOCTYPE&gt;
+          <span style="display: block">&lt;html&gt;</span>
+          &lt;head&gt; &lt;&#47;head&gt;
+          <span style="display: block">&lt;body&gt; &lt;&#47;body&gt;</span>
+          <span style="display: block">&lt;&#47;html&gt;</span>
         </p>
 
         <h1 class="content-head"><span class="symbol">&middot;</span>CSS</h1>
