--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="CSS/general.css" />
     <link rel="stylesheet" href="CSS/text.css" />
+    <link rel="stylesheet" href="CSS/nav-bar.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,7 +34,15 @@
   <body>
     <header>
       <p class="head">Welcome to Project-1</p>
-      <nav></nav>
+      <nav>
+        <p class="logo" style="display: inline-block">Project-1</p>
+
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Me</a></li>
+          <li><a href="#">Contact us</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section class="secctions">
