--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
         </p>
 
         <h1 class="content-head"><span class="symbol">&middot;</span>CSS</h1>
-        <p class="text"></p>
+        <p class="text">
+          CSS stands for Cascading Style Sheets. It is used to style a web page.
+        </p>
       </section>
     </main>
     <footer></footer>
