--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About Me</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
           <li><a href="#">Contact us</a></li>
         </ul>
       </nav>
