--- a/aboutme.html
+++ b/aboutme.html
@@ -3,8 +3,65 @@
 <html>
   <head>
     <title>About Me</title>
+
+    <link rel="stylesheet" href="CSS/general.css" />
+    <link rel="stylesheet" href="CSS/text.css" />
+    <link rel="stylesheet" href="CSS/nav-bar.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <p>Hello everyone</p>
+    <h2 class="content-head">About Me</h2>
+    <div class="aboutme" style="display: grid">
+      <div>
+        <p class="text">
+          Hello everyone. My name is Dhanonjoy Saha Anogh. I live in Dhaka. I
+          read in class VIII in Adamjee Cantonment Public School. Lorem ipsum
+          dolor sit, amet consectetur adipisicing elit. Odio voluptatum, labore
+          asperiores commodi ratione exercitationem eveniet aut optio, facere
+          alias laudantium? Quasi facilis quod.
+        </p>
+      </div>
+      <div>
+        <img src="pic/cd 1-239144.jpg" alt="My photo!" class="pic" />
+      </div>
+      <div class="text">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ipsum
+        nulla culpa enim adipisci. Eos perferendis dolores ipsam alias, nobis
+        odit similique perspiciatis consequuntur quia earum dignissimos. Rem
+        rerum nisi unde voluptas at quaerat sint maiores cum, error debitis ea
+        accusamus praesentium cupiditate expedita consequuntur, ex assumenda
+        maxime illo. Adipisci ducimus eius facere voluptates modi dicta officia
+        deserunt illo culpa nihil quam, aperiam rem earum ullam saepe magnam
+        dolorem ad illum blanditiis totam architecto? Molestias, a cupiditate,
+        dolorum, ipsum rem placeat voluptatum officiis voluptate magnam dolores
+        nihil blanditiis in qui. Vel ducimus fugit voluptatibus eum consequuntur
+        rerum quis a neque, cum molestias ipsum rem aut similique mollitia sed
+        eligendi odit. Laudantium, rem quam inventore omnis deserunt similique
+        corrupti placeat. Exercitationem iusto ipsa cumque excepturi id eius
+        incidunt quibusdam qui, quod maiores, porro assumenda voluptatem numquam
+        sit, a corrupti itaque odio quo placeat quia. Earum obcaecati non nisi
+        fugit debitis corporis.
+      </div>
+    </div>
   </body>
 </html>
