--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,9 @@
 
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
 
     <link rel="stylesheet" href="CSS/general.css" />
@@ -30,39 +33,51 @@
     />
   </head>
   <body>
-    <h2 class="content-head">About Me</h2>
-    <div class="aboutme" style="display: grid">
-      <div>
-        <p class="text">
-          Hello everyone. My name is Dhanonjoy Saha Anogh. I live in Dhaka. I
-          read in class VIII in Adamjee Cantonment Public School. Lorem ipsum
-          dolor sit, amet consectetur adipisicing elit. Odio voluptatum, labore
-          asperiores commodi ratione exercitationem eveniet aut optio, facere
-          alias laudantium? Quasi facilis quod.
-        </p>
+    <header>
+      <h2 class="content-head">About Me</h2>
+      <nav>
+        <p class="logo" style="display: inline-block">Project-1</p>
+
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">About Me</a></li>
+          <li><a href="contact_us.html">Contact us</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="aboutme" style="display: grid">
+        <div>
+          <p class="text">
+            Hello everyone. My name is Dhanonjoy Saha Anogh. I live in Dhaka. I
+            read in class VIII in Adamjee Cantonment Public School. Lorem ipsum
+            dolor sit, amet consectetur adipisicing elit. Odio voluptatum,
+            labore asperiores commodi ratione exercitationem eveniet aut optio,
+            facere alias laudantium? Quasi facilis quod.
+          </p>
+        </div>
+        <div>
+          <img src="pic/cd 1-239144.jpg" alt="My photo!" class="pic" />
+        </div>
+        <div class="text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore
+          ipsum nulla culpa enim adipisci. Eos perferendis dolores ipsam alias,
+          nobis odit similique perspiciatis consequuntur quia earum dignissimos.
+          Rem rerum nisi unde voluptas at quaerat sint maiores cum, error
+          debitis ea accusamus praesentium cupiditate expedita consequuntur, ex
+          assumenda maxime illo. Adipisci ducimus eius facere voluptates modi
+          dicta officia deserunt illo culpa nihil quam, aperiam rem earum ullam
+          saepe magnam dolorem ad illum blanditiis totam architecto? Molestias,
+          a cupiditate, dolorum, ipsum rem placeat voluptatum officiis voluptate
+          magnam dolores nihil blanditiis in qui. Vel ducimus fugit voluptatibus
+          eum consequuntur rerum quis a neque, cum molestias ipsum rem aut
+          similique mollitia sed eligendi odit. Laudantium, rem quam inventore
+          omnis deserunt similique corrupti placeat. Exercitationem iusto ipsa
+          cumque excepturi id eius incidunt quibusdam qui, quod maiores, porro
+          assumenda voluptatem numquam sit, a corrupti itaque odio quo placeat
+          quia. Earum obcaecati non nisi fugit debitis corporis.
+        </div>
       </div>
-      <div>
-        <img src="pic/cd 1-239144.jpg" alt="My photo!" class="pic" />
-      </div>
-      <div class="text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore ipsum
-        nulla culpa enim adipisci. Eos perferendis dolores ipsam alias, nobis
-        odit similique perspiciatis consequuntur quia earum dignissimos. Rem
-        rerum nisi unde voluptas at quaerat sint maiores cum, error debitis ea
-        accusamus praesentium cupiditate expedita consequuntur, ex assumenda
-        maxime illo. Adipisci ducimus eius facere voluptates modi dicta officia
-        deserunt illo culpa nihil quam, aperiam rem earum ullam saepe magnam
-        dolorem ad illum blanditiis totam architecto? Molestias, a cupiditate,
-        dolorum, ipsum rem placeat voluptatum officiis voluptate magnam dolores
-        nihil blanditiis in qui. Vel ducimus fugit voluptatibus eum consequuntur
-        rerum quis a neque, cum molestias ipsum rem aut similique mollitia sed
-        eligendi odit. Laudantium, rem quam inventore omnis deserunt similique
-        corrupti placeat. Exercitationem iusto ipsa cumque excepturi id eius
-        incidunt quibusdam qui, quod maiores, porro assumenda voluptatem numquam
-        sit, a corrupti itaque odio quo placeat quia. Earum obcaecati non nisi
-        fugit debitis corporis.
-      </div>
-    </div>
-    <a href="index.html" class="web-link" style="margin-top: 10px;">Go Back</a>
+    </main>
   </body>
 </html>
