--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project-1</title>
+    <title>Project-1-Home</title>
 
     <link rel="stylesheet" href="CSS/general.css" />
     <link rel="stylesheet" href="CSS/text.css" />
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="#">Contact us</a></li>
+          <li><a href="contact_us.html">Contact us</a></li>
         </ul>
       </nav>
     </header>
@@ -120,6 +120,5 @@
         </p>
       </section>
     </main>
-    <footer></footer>
   </body>
 </html>
