--- a/aboutme.html
+++ b/aboutme.html
@@ -60,22 +60,33 @@
           <img src="pic/cd 1-239144.jpg" alt="My photo!" class="pic" />
         </div>
         <div class="text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore
-          ipsum nulla culpa enim adipisci. Eos perferendis dolores ipsam alias,
-          nobis odit similique perspiciatis consequuntur quia earum dignissimos.
-          Rem rerum nisi unde voluptas at quaerat sint maiores cum, error
-          debitis ea accusamus praesentium cupiditate expedita consequuntur, ex
-          assumenda maxime illo. Adipisci ducimus eius facere voluptates modi
-          dicta officia deserunt illo culpa nihil quam, aperiam rem earum ullam
-          saepe magnam dolorem ad illum blanditiis totam architecto? Molestias,
-          a cupiditate, dolorum, ipsum rem placeat voluptatum officiis voluptate
-          magnam dolores nihil blanditiis in qui. Vel ducimus fugit voluptatibus
-          eum consequuntur rerum quis a neque, cum molestias ipsum rem aut
-          similique mollitia sed eligendi odit. Laudantium, rem quam inventore
-          omnis deserunt similique corrupti placeat. Exercitationem iusto ipsa
-          cumque excepturi id eius incidunt quibusdam qui, quod maiores, porro
-          assumenda voluptatem numquam sit, a corrupti itaque odio quo placeat
-          quia. Earum obcaecati non nisi fugit debitis corporis.
+          <p>
+            As a web designer with a basic understanding of Python programming,
+            I likely have an interest in creating more dynamic and interactive
+            web pages. By deepening your knowledge of both web design and Python
+            programming, I can enhance my ability to create engaging and
+            functional web applications.
+          </p>
+          <p>
+            By learning more about web design, I can gain a better understanding
+            of HTML, CSS, and JavaScript, which are the foundational
+            technologies of the web. This knowledge can help me to create web
+            pages that are optimized for speed, usability, and accessibility.
+          </p>
+          <p>
+            By learning more about Python, I can gain the ability to build more
+            sophisticated web applications, such as dynamic websites, web APIs,
+            and server-side scripts. Python can also be used for data analysis
+            and machine learning, which can be valuable skills for creating
+            data-driven web applications.
+          </p>
+          <p>
+            By learning more about Python, you can gain the ability to build
+            more sophisticated web applications, such as dynamic websites, web
+            APIs, and server-side scripts. Python can also be used for data
+            analysis and machine learning, which can be valuable skills for
+            creating data-driven web applications. This is all about me.
+          </p>
         </div>
       </div>
     </main>
