--- a/contact_us.html
+++ b/contact_us.html
@@ -45,7 +45,36 @@
       </nav>
     </header>
     <main>
-      <p>I have different social media accounts like Github, </p>
+      <p class="text">
+        I have a few social media accounts like Github. I have two public
+        repositories in my github account. They are..
+      </p>
+      <div>
+        <a
+          href="https://github.com/DjSahaAnogh/Python"
+          class="web-link"
+          style="margin-top: 4px; margin-bottom: 4px"
+          >Python</a
+        >
+        <p class="text">
+          Tis is my first python repository. In this repository I will learn all
+          python concept. I'm a new python beginner. I'm working on different
+          python concepts and adding new codes and files. About new_world.py
+          This is a draft file. I work on it as draft and then move the codes to
+          a new file and name it according to my work. Like the calculator.py, I
+          wrote the code in new_world.py then move it to calculator.py.
+        </p>
+      </div>
+      <div>
+        <a href="https://github.com/DjSahaAnogh/Project-1" class="web-link"
+          >PROJECT-1</a
+        >
+        <p>
+          This is my own HTML project. In it I will try to practice different
+          html tags as well as css. I will also try to add a few functionalty in
+          this web site bt JavaScript.
+        </p>
+      </div>
     </main>
   </body>
 </html>
