--- a/index.html
+++ b/index.html
@@ -115,9 +115,50 @@
         </p>
 
         <h1 class="content-head"><span class="symbol">&middot;</span>CSS</h1>
-        <p class="text">
-          CSS stands for Cascading Style Sheets. It is used to style a web page.
-        </p>
+        <div>
+          <p class="text">
+            CSS3 is the latest version of the Cascading Style Sheets language.
+            It provides web developers with powerful new styling capabilities
+            that were not possible in previous versions of CSS. Some of the
+            major features introduced in CSS3 include:
+          </p>
+          <p class="text">
+            1.Selectors: CSS3 introduces new selectors that allow developers to
+            target specific elements on a web page more easily. This includes
+            attribute selectors, pseudo-classes, and the :not() selector.
+          </p>
+          <p class="text">
+            2.Box model: CSS3 introduces the ability to control the sizing and
+            positioning of boxes on a web page using the box-sizing property.
+            This property allows developers to specify whether an element's
+            width and height should include padding and border, or just its
+            content.
+          </p>
+          <p class="text">
+            3.Flexbox: CSS3 introduces the flexible box layout module, also known
+            as flexbox. Flexbox provides a more efficient way to create complex
+            layouts without using floats or positioning.
+          </p>
+          <p class="text">
+            4.Animations: CSS3 introduces the ability to create animations and
+            transitions using keyframes and the animation property. This allows
+            developers to add dynamic effects to their web pages without using
+            JavaScript.
+          </p>
+          <p class="text">
+            5.Media queries: CSS3 introduces media queries, which allow developers
+            to apply different styles to a web page based on the device it is
+            being viewed on. This allows for responsive design, where a web page
+            can adapt to different screen sizes and resolutions.
+          </p>
+          <p class="text">
+            Overall, CSS3 provides web developers with a powerful set of tools
+            for creating dynamic and responsive web pages. Its new features and
+            capabilities make it easier to create complex layouts and add
+            dynamic effects without the need for external libraries or
+            JavaScript.
+          </p>
+        </div>
       </section>
     </main>
   </body>
