--- a/contact_us.html
+++ b/contact_us.html
@@ -69,7 +69,7 @@
         <a href="https://github.com/DjSahaAnogh/Project-1" class="web-link"
           >PROJECT-1</a
         >
-        <p>
+        <p class="text">
           This is my own HTML project. In it I will try to practice different
           html tags as well as css. I will also try to add a few functionalty in
           this web site bt JavaScript.
