--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <a class="web-link" target="_blank" href="https://www.acps.edu.bd/"
             >Adamjee Cantonment Public School(ACPS)</a
           >.
+          <img class="school_pic", src="/pic/download (1).jpeg", alt="pic of our school">
         </p>
         <p class="text">
           Now, we will talk about a few things. Frist we&#39;ll talk about HTML.
@@ -78,7 +79,7 @@
         </p>
       </section>
       <section>
-        <h1 class="content-head"><span class="symbol">&middot;</span>HTML</h1>
+        <h1 class="content-head", style="margin-top: 250px;"><span class="symbol">&middot;</span>HTML</h1>
         <p class="text">
           HTML stands for Hypertext Markup Language. Tim Berners-Lee wrote the
           first version of HTML in 1993. Since then, there have been many
@@ -87,6 +88,7 @@
           1999. At present the most used version of HTML is HTML5. Another
           version, XHTML, was a rewrite of HTML as an XML language.
         </p>
+        <img class="pic", src="/pic/888859.png", alt="html">
         <p class="text">
           HTML was invented initially as a language intended for the
           distribution of relatively simple for use by authors documents,
