--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           let&#39;s get started&#33;
         </p>
       </section>
-      <section>
+      <section class="secctions">
         <h1 class="content-head", style="margin-top: 250px;"><span class="symbol">&middot;</span>HTML</h1>
         <p class="text">
           HTML stands for Hypertext Markup Language. Tim Berners-Lee wrote the
