--- a/aboutme.html
+++ b/aboutme.html
@@ -56,9 +56,7 @@
             facere alias laudantium? Quasi facilis quod.
           </p>
         </div>
-        <div>
-          <img src="pic/cd 1-239144.jpg" alt="My photo!" class="pic" />
-        </div>
+        <div></div>
         <div class="text">
           <p>
             As a web designer with a basic understanding of Python programming,
