--- a/index.html
+++ b/index.html
@@ -108,13 +108,15 @@
           it. So, we should use the standard structur therefore it will work on
           all device. The standard sturctur is showen below.
         </p>
-        <p class="text">
-          &lt;DOCTYPE&gt;
-          <span style="display: block">&lt;html&gt;</span>
-          &lt;head&gt; &lt;&#47;head&gt;
-          <span style="display: block">&lt;body&gt; &lt;&#47;body&gt;</span>
-          <span style="display: block">&lt;&#47;html&gt;</span>
-        </p>
+        <pre>
+          <code style="font-size: 18px;">
+            &lt;!DOCTYPE&gt;
+            &lt;html&gt;
+            &lt;head&gt; &lt;&#47;head&gt;
+            &lt;body&gt; &lt;&#47;body&gt;
+            &lt;&#47;html&gt;
+          </code>
+        </pre>
 
         <h1 class="content-head"><span class="symbol">&middot;</span>CSS</h1>
         <div>
@@ -129,6 +131,8 @@
             target specific elements on a web page more easily. This includes
             attribute selectors, pseudo-classes, and the :not() selector.
           </p>
+          <img src="/pic/code-editor-in-action.png", alt="code-editor-in-action", class="pic_1">
+          <img src="/pic/css-box-model-core.png", alt="css-box-model-core", class="pic_1">
           <p class="text">
             2.Box model: CSS3 introduces the ability to control the sizing and
             positioning of boxes on a web page using the box-sizing property.
