--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#">About Me</a></li>
-          <li><a href="contact_us.html">Contact us</a></li>
+          <li><a href="contact_us.html">Contact me</a></li>
         </ul>
       </nav>
     </header>
