--- a/contact_me.html
+++ b/contact_me.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="#">Contact us</a></li>
+          <li><a href="#">Contact me</a></li>
         </ul>
       </nav>
     </header>
