--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="contact_us.html">Contact us</a></li>
+          <li><a href="contact_us.html">Contact me</a></li>
         </ul>
       </nav>
     </header>
