--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </nav>
     </header>
     <main>
-      <section class="secctions">
+      <section class="sections-head">
         <h1 class="content-head">
           <span class="symbol">&middot;</span>Introduction
         </h1>
@@ -79,46 +79,51 @@
           let&#39;s get started&#33;
         </p>
       </section>
-      <section class="secctions">
+      <section class="sections-html">
         <h1 class="content-head", style="margin-top: 250px;"><span class="symbol">&middot;</span>HTML</h1>
-        <p class="text">
-          HTML stands for Hypertext Markup Language. Tim Berners-Lee wrote the
-          first version of HTML in 1993. Since then, there have been many
-          different versions of HTML. The most widely used version throughout
-          the 2000s was HTML 4.01, which became an official standard in December
-          1999. At present the most used version of HTML is HTML5. Another
-          version, XHTML, was a rewrite of HTML as an XML language.
-        </p>
-        <img class="pic", src="/pic/888859.png", alt="html">
-        <p class="text">
-          HTML was invented initially as a language intended for the
-          distribution of relatively simple for use by authors documents,
-          suitable or academics rather than experts in printing or other aspects
-          of document formatting.
-        </p>
-        <p class="text">
-          HTML is very easy to learn. By useing HTML we can make a structur of a
-          web page. Web sites are mainly a group of web pages, which are
-          connected. We can easily make a wed page by a few html tags.
-        </p>
-        <p class="text">
-          There are a lot of html tags. It has its onw standard structur. But we
-          can a wed page with or without it. But it is a best practice to use
-          it. Because, the code we have written without it can be see on our
-          local machine, but when we will publish it may not show as we accept
-          it. So, we should use the standard structur therefore it will work on
-          all device. The standard sturctur is showen below.
-        </p>
-        <pre>
-          <code style="font-size: 18px;">
-            &lt;!DOCTYPE&gt;
-            &lt;html&gt;
-            &lt;head&gt; &lt;&#47;head&gt;
-            &lt;body&gt; &lt;&#47;body&gt;
-            &lt;&#47;html&gt;
-          </code>
-        </pre>
-
+        <div>
+          
+          <p class="text">
+            HTML stands for Hypertext Markup Language. Tim Berners-Lee wrote the
+            first version of HTML in 1993. Since then, there have been many
+            different versions of HTML. The most widely used version throughout
+            the 2000s was HTML 4.01, which became an official standard in December
+            1999. At present the most used version of HTML is HTML5. Another
+            version, XHTML, was a rewrite of HTML as an XML language.
+          </p>
+          <img class="pic", src="/pic/888859.png", alt="html">
+          <p class="text">
+            HTML was invented initially as a language intended for the
+            distribution of relatively simple for use by authors documents,
+            suitable or academics rather than experts in printing or other aspects
+            of document formatting.
+          </p>
+          <p class="text">
+            HTML is very easy to learn. By useing HTML we can make a structur of a
+            web page. Web sites are mainly a group of web pages, which are
+            connected. We can easily make a wed page by a few html tags.
+          </p>
+          <p class="text">
+            There are a lot of html tags. It has its onw standard structur. But we
+            can a wed page with or without it. But it is a best practice to use
+            it. Because, the code we have written without it can be see on our
+            local machine, but when we will publish it may not show as we accept
+            it. So, we should use the standard structur therefore it will work on
+            all device. The standard sturctur is showen below.
+          </p>
+          <pre>
+            <code style="font-size: 18px;">
+              &lt;!DOCTYPE&gt;
+              &lt;html&gt;
+              &lt;head&gt; &lt;&#47;head&gt;
+              &lt;body&gt; &lt;&#47;body&gt;
+              &lt;&#47;html&gt;
+            </code>
+          </pre>
+  
+        </div>
+      </section>
+      <section class="sections-css">
         <h1 class="content-head"><span class="symbol">&middot;</span>CSS</h1>
         <div>
           <p class="text">
@@ -166,6 +171,9 @@
             JavaScript.
           </p>
         </div>
+      </section>
+      <section class="sections-java">
+
       </section>
     </main>
   </body>
