--- a/index.html
+++ b/index.html
@@ -173,8 +173,12 @@
         </div>
       </section>
       <section class="sections-java">
-
+        <div></div>
       </section>
+      <div style="float: right;">
+        <a href="index.html"><button class="go_to_top button-trans">Back to top</button></a>
+      </div>
     </main>
+    <footer></footer>
   </body>
 </html>
