--- a/aboutme.html
+++ b/aboutme.html
@@ -87,6 +87,9 @@
           </p>
         </div>
       </div>
+      <div style="float: right;">
+        <a href="index.html"><button class="go_to_top button-trans">Back to top</button></a>
+      </div>
     </main>
   </body>
 </html>
