--- a/contact_me.html
+++ b/contact_me.html
@@ -75,6 +75,9 @@
           this web site bt JavaScript.
         </p>
       </div>
+      <div style="float: right;">
+        <a href="index.html"><button class="go_to_top button-trans">Back to top</button></a>
+      </div>
     </main>
   </body>
 </html>
