Project updated and JS work started

--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#">About Me</a></li>
-          <li><a href="contact_us.html">Contact me</a></li>
+          <li><a href="contact_me.html">Contact me</a></li>
         </ul>
       </nav>
     </header>
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div style="float: right;">
-        <a href="index.html"><button class="go_to_top button-trans">Back to top</button></a>
+        <a href="aboutme.html"><button class="go_to_top">Back to top</button></a>
       </div>
     </main>
   </body>
