--- a/contact_me.html
+++ b/contact_me.html
@@ -76,7 +76,7 @@
         </p>
       </div>
       <div style="float: right;">
-        <a href="index.html"><button class="go_to_top button-trans">Back to top</button></a>
+        <a href="contact_me.html"><button class="go_to_top">Back to top</button></a>
       </div>
     </main>
   </body>
