--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="contact_us.html">Contact me</a></li>
+          <li><a href="contact_me.html">Contact me</a></li>
         </ul>
       </nav>
     </header>
@@ -173,10 +173,35 @@
         </div>
       </section>
       <section class="sections-java">
-        <div></div>
+        <h1 class="content-head"><span class="symbol">&middot;</span>JavaScript</h1>
+        <div>
+          <p class="text">
+            JavaScript is a scripting language that is used to add interactivity to web pages. It is one of the three core technologies of web development, along with HTML and CSS. JavaScript can be used to manipulate HTML elements, respond to user events, and communicate with servers.
+          </p>
+          <p class="text">How to Use JavaScript in HTML</p>
+          <p class="text">There are two main ways to use JavaScript in HTML:</p>
+          <p class="text">Embedding JavaScript code directly into HTML pages: This is done using the script tag. The `script` tag has a `src` attribute that can be used to specify the URL of a JavaScript file, or it can contain JavaScript code directly between its opening and closing tags.</p>
+            <pre >
+              <code style="font-size: 18px;">
+                html
+                &lt;script&gt;
+                  alert("Hello, world!");
+                &lt;&#47;script&gt;
+              </code>
+            </pre>
+            <p class="text">
+              Linking to JavaScript files from external sources: This is the preferred way to use JavaScript in HTML, as it allows you to separate your JavaScript code from your HTML code. To link to a JavaScript file, you use the `script` tag with the `src` attribute.
+            </p>
+            <pre >
+              <code style="font-size: 18px;">
+                html
+                &lt;script src="myscript.js"&gt;&lt;&#47;script&gt;
+              </code>
+            </pre>
+        </div>
       </section>
       <div style="float: right;">
-        <a href="index.html"><button class="go_to_top button-trans">Back to top</button></a>
+        <a href="index.html"><button class="go_to_top">Back to top</button></a>
       </div>
     </main>
     <footer></footer>
