--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
+    <link rel="icon" href="pic/1event-management.png" type="image/x-icon">
 
     <link rel="stylesheet" href="CSS/general.css" />
     <link rel="stylesheet" href="CSS/text.css" />
