--- a/contact_me.html
+++ b/contact_me.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact us</title>
+    <title>Contact me</title>
+    <link rel="icon" href="pic/1event-management.png" type="image/x-icon">
 
     <link rel="stylesheet" href="CSS/general.css" />
     <link rel="stylesheet" href="CSS/text.css" />
