--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project-1-Home</title>
-    <link rel="icon" href="pic/1event-management.png" type="image/x-icon">
+    <link rel="icon" href="pic/1event-management.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="CSS/general.css" />
     <link rel="stylesheet" href="CSS/text.css" />
@@ -72,7 +72,13 @@
           <a class="web-link" target="_blank" href="https://www.acps.edu.bd/"
             >Adamjee Cantonment Public School(ACPS)</a
           >.
-          <img class="school_pic", src="/pic/download (1).jpeg", alt="pic of our school">
+          <img
+            class="school_pic"
+            ,
+            src="/pic/download (1).jpeg"
+            ,
+            alt="pic of our school"
+          />
         </p>
         <p class="text">
           Now, we will talk about a few things. Frist we&#39;ll talk about HTML.
@@ -80,36 +86,37 @@
         </p>
       </section>
       <section class="sections-html">
-        <h1 class="content-head", style="margin-top: 250px;"><span class="symbol">&middot;</span>HTML</h1>
+        <h1 class="content-head" , style="margin-top: 250px">
+          <span class="symbol">&middot;</span>HTML
+        </h1>
         <div>
-          
           <p class="text">
             HTML stands for Hypertext Markup Language. Tim Berners-Lee wrote the
             first version of HTML in 1993. Since then, there have been many
             different versions of HTML. The most widely used version throughout
-            the 2000s was HTML 4.01, which became an official standard in December
-            1999. At present the most used version of HTML is HTML5. Another
-            version, XHTML, was a rewrite of HTML as an XML language.
+            the 2000s was HTML 4.01, which became an official standard in
+            December 1999. At present the most used version of HTML is HTML5.
+            Another version, XHTML, was a rewrite of HTML as an XML language.
           </p>
-          <img class="pic", src="/pic/888859.png", alt="html">
+          <img class="pic" , src="/pic/888859.png" , alt="html" />
           <p class="text">
             HTML was invented initially as a language intended for the
             distribution of relatively simple for use by authors documents,
-            suitable or academics rather than experts in printing or other aspects
-            of document formatting.
+            suitable or academics rather than experts in printing or other
+            aspects of document formatting.
           </p>
           <p class="text">
-            HTML is very easy to learn. By useing HTML we can make a structur of a
-            web page. Web sites are mainly a group of web pages, which are
+            HTML is very easy to learn. By useing HTML we can make a structur of
+            a web page. Web sites are mainly a group of web pages, which are
             connected. We can easily make a wed page by a few html tags.
           </p>
           <p class="text">
-            There are a lot of html tags. It has its onw standard structur. But we
-            can a wed page with or without it. But it is a best practice to use
-            it. Because, the code we have written without it can be see on our
-            local machine, but when we will publish it may not show as we accept
-            it. So, we should use the standard structur therefore it will work on
-            all device. The standard sturctur is showen below.
+            There are a lot of html tags. It has its onw standard structur. But
+            we can a wed page with or without it. But it is a best practice to
+            use it. Because, the code we have written without it can be see on
+            our local machine, but when we will publish it may not show as we
+            accept it. So, we should use the standard structur therefore it will
+            work on all device. The standard sturctur is showen below.
           </p>
           <pre>
             <code style="font-size: 18px;">
@@ -120,7 +127,6 @@
               &lt;&#47;html&gt;
             </code>
           </pre>
-  
         </div>
       </section>
       <section class="sections-css">
@@ -137,8 +143,20 @@
             target specific elements on a web page more easily. This includes
             attribute selectors, pseudo-classes, and the :not() selector.
           </p>
-          <img src="/pic/code-editor-in-action.png", alt="code-editor-in-action", class="pic_1">
-          <img src="/pic/css-box-model-core.png", alt="css-box-model-core", class="pic_1">
+          <img
+            src="/pic/code-editor-in-action.png"
+            ,
+            alt="code-editor-in-action"
+            ,
+            class="pic_1"
+          />
+          <img
+            src="/pic/css-box-model-core.png"
+            ,
+            alt="css-box-model-core"
+            ,
+            class="pic_1"
+          />
           <p class="text">
             2.Box model: CSS3 introduces the ability to control the sizing and
             positioning of boxes on a web page using the box-sizing property.
@@ -147,9 +165,9 @@
             content.
           </p>
           <p class="text">
-            3.Flexbox: CSS3 introduces the flexible box layout module, also known
-            as flexbox. Flexbox provides a more efficient way to create complex
-            layouts without using floats or positioning.
+            3.Flexbox: CSS3 introduces the flexible box layout module, also
+            known as flexbox. Flexbox provides a more efficient way to create
+            complex layouts without using floats or positioning.
           </p>
           <p class="text">
             4.Animations: CSS3 introduces the ability to create animations and
@@ -158,10 +176,11 @@
             JavaScript.
           </p>
           <p class="text">
-            5.Media queries: CSS3 introduces media queries, which allow developers
-            to apply different styles to a web page based on the device it is
-            being viewed on. This allows for responsive design, where a web page
-            can adapt to different screen sizes and resolutions.
+            5.Media queries: CSS3 introduces media queries, which allow
+            developers to apply different styles to a web page based on the
+            device it is being viewed on. This allows for responsive design,
+            where a web page can adapt to different screen sizes and
+            resolutions.
           </p>
           <p class="text">
             Overall, CSS3 provides web developers with a powerful set of tools
@@ -173,15 +192,27 @@
         </div>
       </section>
       <section class="sections-java">
-        <h1 class="content-head"><span class="symbol">&middot;</span>JavaScript</h1>
+        <h1 class="content-head">
+          <span class="symbol">&middot;</span>JavaScript
+        </h1>
         <div>
           <p class="text">
-            JavaScript is a scripting language that is used to add interactivity to web pages. It is one of the three core technologies of web development, along with HTML and CSS. JavaScript can be used to manipulate HTML elements, respond to user events, and communicate with servers.
+            JavaScript is a scripting language that is used to add interactivity
+            to web pages. It is one of the three core technologies of web
+            development, along with HTML and CSS. JavaScript can be used to
+            manipulate HTML elements, respond to user events, and communicate
+            with servers.
           </p>
           <p class="text">How to Use JavaScript in HTML</p>
           <p class="text">There are two main ways to use JavaScript in HTML:</p>
-          <p class="text">Embedding JavaScript code directly into HTML pages: This is done using the script tag. The `script` tag has a `src` attribute that can be used to specify the URL of a JavaScript file, or it can contain JavaScript code directly between its opening and closing tags.</p>
-            <pre >
+          <p class="text">
+            Embedding JavaScript code directly into HTML pages: This is done
+            using the script tag. The `script` tag has a `src` attribute that
+            can be used to specify the URL of a JavaScript file, or it can
+            contain JavaScript code directly between its opening and closing
+            tags.
+          </p>
+          <pre>
               <code style="font-size: 18px;">
                 html
                 &lt;script&gt;
@@ -189,18 +220,42 @@
                 &lt;&#47;script&gt;
               </code>
             </pre>
-            <p class="text">
-              Linking to JavaScript files from external sources: This is the preferred way to use JavaScript in HTML, as it allows you to separate your JavaScript code from your HTML code. To link to a JavaScript file, you use the `script` tag with the `src` attribute.
-            </p>
-            <pre >
+          <p class="text">
+            Linking to JavaScript files from external sources: This is the
+            preferred way to use JavaScript in HTML, as it allows you to
+            separate your JavaScript code from your HTML code. To link to a
+            JavaScript file, you use the `script` tag with the `src` attribute.
+          </p>
+          <pre>
               <code style="font-size: 18px;">
                 html
                 &lt;script src="myscript.js"&gt;&lt;&#47;script&gt;
               </code>
             </pre>
+          <p class="text">
+            JavaScript can be used to do a wide variety of things, including:
+          </p>
+          <p class="text">
+            1. Manipulating HTML elements: JavaScript can be used to change the
+            content of HTML elements, add or remove elements, and change the
+            style of elements.
+          </p>
+          <img src="pic/Manipulating HTML elements.png" alt="Manipulating HTML elements" class="pic_2">
+          <img src="pic/Responding to user events.jpg" alt="Responding to user events" class="pic_2">
+          <p class="text">
+            2. Responding to user events: JavaScript can be used to respond to user
+            events, such as mouse clicks, keyboard presses, and form
+            submissions.
+          </p>
+          <p class="text">
+            3. Communicating with servers: JavaScript can be used to communicate
+            with servers using Ajax. Ajax allows you to make asynchronous
+            requests to servers without reloading the page.
+          </p>
+          <img src="pic/Communicating with servers.jpg" alt="Communicating with servers" class="pic_2">
         </div>
       </section>
-      <div style="float: right;">
+      <div style="float: right">
         <a href="index.html"><button class="go_to_top">Back to top</button></a>
       </div>
     </main>
