--- a/index.html
+++ b/index.html
@@ -72,16 +72,10 @@
           <a class="web-link" target="_blank" href="https://www.acps.edu.bd/"
             >Adamjee Cantonment Public School(ACPS)</a
           >.
-          <img
-            class="school_pic"
-            ,
-            src="/pic/download (1).jpeg"
-            ,
-            alt="pic of our school"
-          />
+          <img class="school_pic",  src="/pic/download (1).jpeg", alt="pic of our school"/>
         </p>
         <p class="text">
-          Now, we will talk about a few things. Frist we&#39;ll talk about HTML.
+          Now, we will talk about a few things. First we&#39;ll talk about HTML.
           let&#39;s get started&#33;
         </p>
       </section>
@@ -94,7 +88,7 @@
             HTML stands for Hypertext Markup Language. Tim Berners-Lee wrote the
             first version of HTML in 1993. Since then, there have been many
             different versions of HTML. The most widely used version throughout
-            the 2000s was HTML 4.01, which became an official standard in
+            the 2000s as HTML 4.01, which became an official standard in
             December 1999. At present the most used version of HTML is HTML5.
             Another version, XHTML, was a rewrite of HTML as an XML language.
           </p>
@@ -106,17 +100,17 @@
             aspects of document formatting.
           </p>
           <p class="text">
-            HTML is very easy to learn. By useing HTML we can make a structur of
-            a web page. Web sites are mainly a group of web pages, which are
-            connected. We can easily make a wed page by a few html tags.
+            HTML is straightforward to learn. By using HTML we can make a structure of
+            a web page. Websites are mainly a group of web pages, which are
+            connected. We can easily make a wed page with a few HTML tags.
           </p>
           <p class="text">
-            There are a lot of html tags. It has its onw standard structur. But
-            we can a wed page with or without it. But it is a best practice to
-            use it. Because, the code we have written without it can be see on
-            our local machine, but when we will publish it may not show as we
-            accept it. So, we should use the standard structur therefore it will
-            work on all device. The standard sturctur is showen below.
+            There are a lot of HTML tags. It has its standard structure. But
+            we can a web page with or without it. But it is a best practice to
+            use it. Because the code we have written without it can be seen on
+            our local machine, but when we publish it may not show as we
+            accept it. So, we should use the standard structure therefore it will
+            work on all devices. The standard structure is shown below.
           </p>
           <pre>
             <code style="font-size: 18px;">
@@ -139,7 +133,7 @@
             major features introduced in CSS3 include:
           </p>
           <p class="text">
-            1.Selectors: CSS3 introduces new selectors that allow developers to
+            1. Selectors: CSS3 introduces new selectors that allow developers to
             target specific elements on a web page more easily. This includes
             attribute selectors, pseudo-classes, and the :not() selector.
           </p>
@@ -158,27 +152,27 @@
             class="pic_1"
           />
           <p class="text">
-            2.Box model: CSS3 introduces the ability to control the sizing and
+            2. Box model: CSS3 introduces the ability to control the sizing and
             positioning of boxes on a web page using the box-sizing property.
             This property allows developers to specify whether an element's
             width and height should include padding and border, or just its
             content.
           </p>
           <p class="text">
-            3.Flexbox: CSS3 introduces the flexible box layout module, also
+            3. Flexbox: CSS3 introduces the flexible box layout module, also
             known as flexbox. Flexbox provides a more efficient way to create
             complex layouts without using floats or positioning.
           </p>
           <p class="text">
-            4.Animations: CSS3 introduces the ability to create animations and
+            4. Animations: CSS3 introduces the ability to create animations and
             transitions using keyframes and the animation property. This allows
             developers to add dynamic effects to their web pages without using
             JavaScript.
           </p>
           <p class="text">
-            5.Media queries: CSS3 introduces media queries, which allow
+            5. Media queries: CSS3 introduces media queries, which allow
             developers to apply different styles to a web page based on the
-            device it is being viewed on. This allows for responsive design,
+            the device it is being viewed on. This allows for responsive design,
             where a web page can adapt to different screen sizes and
             resolutions.
           </p>
