--- a/web pages/index.html
+++ b/web pages/index.html
@@ -1,30 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="icon" href="/pics/1event-management.png" type="image/x-icon">
-  <link rel="stylesheet" href="/css/general.css">
-  <link rel="stylesheet" href="/css/css for contents/text.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="icon" href="/pics/1event-management.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/css for contents/text.css" />
 
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <h1 class="content_header">About Myself</h1>
-  </header>
-  <main>
-    <section class="about_myself">
-      <p>Hello! I'm Dj Saha. I live in Bangladesh.</p>
-    </section>
-  </main>
-  <footer></footer>
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body style="margin: 15px; background-color: #afeeee;">
+    <header>
+      <h1 class="content_header">About This Site</h1>
+    </header>
+    <main class="content_holder">
+      <section class="about_this_site">
+        <p class="text">
+          Hello! I'm Dj Saha. This is my web site, here I'll express about
+          myself and also other things as well. So, let's get started!
+        </p>
+      </section>
+      <section class="let_us_get_an_into">
+        <p class="text">
+          My name is Dhanonjoy(Dj) Saha Anogh. I live in Bangladesh. I'm in VIII
+          grade. I read in ACPS in Dhaka. I'm trying to learn: HTML, CSS,
+          JavaScirpt and Python. My goal is to become a full-time progarmer. So,
+          I'm trying my best to reach my goal though I'm the journey is not long
+          still I'm going on my way and I believe that I'll reach my goal one
+          day.
+        </p>
+      </section>
+      <section class="my_skill"></section>
+      <section class="my_certificate"></section>
+    </main>
+    <footer class="content_footer"></footer>
+  </body>
 </html>
