--- a/web pages/index.html
+++ b/web pages/index.html
@@ -42,7 +42,10 @@
           day.
         </p>
       </section>
-      <section class="my_skill"></section>
+      <section class="my_skill">
+        <div class="skill_div">1</div>
+        <div class="skill_div">2</div>
+      </section>
       <section class="my_certificate"></section>
     </main>
     <footer class="content_footer"></footer>
